--- a/src/shared/astro/Header.astro
+++ b/src/shared/astro/Header.astro
@@ -117,7 +117,7 @@ const theme: "pod" | "single" = preferences.header.theme || "single";
     --header-background-color-bottom: 0 0 0 / 0.3;
     --header-color: 255 255 255;
     --header-height: 80px;
-    --header-offset-transparent: 0px;
+    --header-content-offset: 0px;
     --header-hover-highlight: 40 40 40;
 
     --header-font-size: var(--text-size-small);
