--- a/src/components/flipbook/flipbook.astro
+++ b/src/components/flipbook/flipbook.astro
@@ -362,7 +362,12 @@ async function setupFlipbook() {
 
     @media only screen and (max-width: 768px) {
         grid-template-columns: 1fr;
-        grid-template-rows: repeat(2, auto);
+        grid-template-rows: 1fr 1fr;
+
+        img {
+          width: 100%;
+          object-fit: contain;
+        }
     }
 
     .flipbook-buttons {
